Fixed issue with scrollbar appearing when not necessary

--- a/treasurer_tools/static/css/base.css
+++ b/treasurer_tools/static/css/base.css
@@ -228,7 +228,7 @@ select, input {
   margin: 0;
   min-height: 100%;
   min-width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0;
   position: absolute;
   z-index: 1;
